tests/query_errors/window_group_by_event_in_target/error.txt
Error: 
   13 |     "bad": string::trim(event.snot)
      |                         ^^^^^^^^^^ References to `event` or `$` are not allowed in this context
